--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
-    "module": "commonjs",
-    "esModuleInterop": true,
+    "target": "es5",
+    "module": "es2015",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "noImplicitAny": true,
     "sourceMap": false,
     "outDir": "build",
     "baseUrl": ".",
     "resolveJsonModule": true,
-    "importHelpers": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
-    "plugins": [
-      {
-        "transform": "@zerollup/ts-transform-paths",
-        "exclude": ["*"]
-      }
-    ]
+    "importHelpers": true
   },
   "exclude": [
     "package.json",
