--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-npm-package-tpl",
-  "version": "1.0.0",
-  "description": "A set of files to get moving for a typescript npm package, remove all not required",
+  "name": "get-first-url-from-string",
+  "version": "0.0.1",
+  "description": "Return the 1st url in a given input text",
   "licence": "MIT",
   "main": "./build/index.js",
   "bin": {
@@ -15,8 +15,8 @@
     "lint": "tslint --project tsconfig.json --fix",
     "lint:fix": "tslint --project tsconfig.json --fix",
     "build:tocs": "npx doctoc .",
-    "build": "rm -fR ./build && ttsc -p . --declaration --declarationDir build",
-    "build:watch": "ttsc --watch -p .",
+    "build": "rm -fR ./build && tsc -p . --declaration --declarationDir build",
+    "build:watch": "tsc --watch -p .",
     "start": "node cli.js",
     "prepublishOnly": "npm run lint && npm run test"
   },
@@ -25,7 +25,7 @@
     "url": "https://github.com/johndcarmichael/openapi-nodegen-emailer.git"
   },
   "keywords": [
-    "TypeScript"
+    "url"
   ],
   "dependencies": {
     "get-urls": "^9.2.0"
@@ -33,14 +33,12 @@
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
-    "@zerollup/ts-transform-paths": "^1.7.17",
     "codecov": "^3.6.5",
     "eslint": "^6.8.0",
     "hasha": "^5.2.0",
     "jest": "^25.3.0",
     "ts-jest": "^25.3.1",
     "tslint": "^6.1.1",
-    "ttypescript": "^1.5.10",
     "typescript": "^3.8.3"
   }
 }
