--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.0.1",
   "description": "Return the 1st url in a given input text",
   "licence": "MIT",
-  "main": "./build/index.js",
-  "bin": {
-    "openapi-nodegen": "./build/cli.js"
-  },
+  "main": "./src/index.js",
   "scripts": {
     "install:githooks": "cp ./githooks/* .git/hooks",
     "test": "npm run lint && npm run test:unit",
@@ -22,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/johndcarmichael/openapi-nodegen-emailer.git"
+    "url": "https://github.com/johndcarmichael/get-first-url-from-string.git"
   },
   "keywords": [
     "url"
