--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "description": "Return the 1st url in a given input text",
   "licence": "MIT",
-  "main": "./src/index.js",
+  "main": "./build/index.js",
   "scripts": {
     "install:githooks": "cp ./githooks/* .git/hooks",
     "test": "npm run lint && npm run test:unit",
