--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "get-first-url-from-string",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "description": "Return the 1st url in a given input text",
   "licence": "MIT",
   "main": "build/index.js",
@@ -10,8 +10,8 @@
     "test": "npm run lint && npm run test:unit",
     "test:unit": "npm run build && jest",
     "test:unit:single": "jest --collect-coverage false",
-    "lint": "tslint --project tsconfig.json --fix",
-    "lint:fix": "tslint --project tsconfig.json --fix",
+    "lint": "eslint 'src/**/*.{js,ts,tsx}'",
+    "lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix",
     "build:tocs": "npx doctoc .",
     "build": "rm -fR ./build && tsc -p . --declaration --declarationDir build",
     "build:watch": "tsc --watch -p .",
@@ -23,20 +23,19 @@
     "url": "https://github.com/johndcarmichael/get-first-url-from-string.git"
   },
   "keywords": [
-    "url"
+    "url regex"
   ],
-  "dependencies": {
-    "get-urls": "^9.2.1"
-  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "@types/jest": "^26.0.13",
     "@types/node": "^14.10.1",
-    "codecov": "^3.7.2",
-    "eslint": "^7.9.0",
-    "hasha": "^5.2.0",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.3.0",
-    "tslint": "^6.1.1",
-    "typescript": "^3.8.3"
+    "codecov": "^3.8.1",
+    "eslint": "^7.17.0",
+    "eslint-plugin-deprecate": "^0.7.0",
+    "hasha": "^5.2.2",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   }
 }
